Streamlined fetching a token

--- a/org.anc.lapps.oauth.grant-service/src/main/resources/templates/planner/granted.html
+++ b/org.anc.lapps.oauth.grant-service/src/main/resources/templates/planner/granted.html
@@ -25,9 +25,7 @@
                         <td th:text="${token.expires}">lifetime</td>
                     </tr>
                 </table>
-                <a href="#" th:href="@{/planner/index}" class="btn btn-default">Back</a>
-                <a href="#" th:href="@{/planner/index}" class="btn btn-primary">Back</a>
-                <a href="#" th:href="@{/planner/index}" class="btn btn-success">Back</a>
+                <a href="#" th:href="@{/index}" class="btn btn-success">Back</a>
             </div>
         </div>
     </div>
