--- a/org.anc.lapps.oauth.grant-service/src/main/resources/templates/layouts/bootstrap.html
+++ b/org.anc.lapps.oauth.grant-service/src/main/resources/templates/layouts/bootstrap.html
@@ -8,7 +8,7 @@
     <meta name="author" content=""/>
     <link rel="icon" href="/favicon.ico"/>
 
-    <title th:text="${pageTitle}">Pipeline Planner</title>
+    <title th:text="${pageTitle}">LDC Authentication</title>
 
     <!-- Bootstrap core CSS -->
     <link th:href="@{/css/bootstrap.css}" href="/css/bootstrap.css" rel="stylesheet"/>
@@ -26,8 +26,8 @@
 
 <div id="header_wrap" class="outer">
     <header class="inner">
-        <h1 id="project_title">American National Corpus</h1>
-        <h2 id="project_tagline">Pipeline Planner</h2>
+        <h1 id="project_title">Language Application Grid</h1>
+        <h2 id="project_tagline">LDC Authentication</h2>
 
     </header>
 </div>
@@ -42,7 +42,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a href="http://www.anc.org" class="navbar-brand">ANC</a>
+                <a href="http://galaxy.lappsgrid.org" class="navbar-brand">Galaxy</a>
             </div>
             <div id="navbarCollapse" class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
