Fixing URLs and menu paths.

--- a/org.anc.lapps.oauth.grant-service/src/main/resources/templates/layouts/bootstrap.html
+++ b/org.anc.lapps.oauth.grant-service/src/main/resources/templates/layouts/bootstrap.html
@@ -131,7 +131,7 @@
         <p>Page content should appear here.</p>
     </div>
     <div class="footer">
-        <p style="font-size: smaller; text-align: center">Copyright &copy; 2015 The American National Corpus. All rights reserved.</p>
+        <p style="font-size: smaller; text-align: center">Copyright &copy; 2015 The Language Application Grid. All rights reserved.</p>
     </div>
 
     <!--
