Fixed typo in authorize/index view.

--- a/org.anc.lapps.oauth.grant-service/src/main/resources/templates/authorize/index.html
+++ b/org.anc.lapps.oauth.grant-service/src/main/resources/templates/authorize/index.html
@@ -16,7 +16,7 @@
                     from the LDC.
                 </p>
                 <p>NOTE: Even with a valid OAuth token, you will not be able to retreive
-                documents from the LDC if you, or your institution, has not purchased access
+                documents from the LDC if you, or your institution, have not purchased access
                 to the resource you are trying to use.</p>
                 <form action="#" th:action="@{/submit}" method="post" th:object="${client}">
                     <table>
